--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,6 @@ install_requires =
     geopy==2.2.0
     retry~=0.9.2
     selenium~=4.8.2
-    googletrans~=3.1.0a0
+    googletrans~=4.0.0rc1
 
 python_requires = >=3.10
