--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -10,50 +10,29 @@ jobs:
     name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
     runs-on: ubuntu-latest
     permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
-
+      id-token: write
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"  # Use a specific version of Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine
+      - name: Install pypa/build
+        run: python -m pip install build
 
-    - name: Bump version
-      id: bump_version  # Set an id to refer to this step's output
-      run: |
-        current_version=$(grep -oP '(?<=version=").*(?=")' setup.py)
-        new_version=$(echo $current_version | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
-        sed -i "s/version=\"$current_version\"/version=\"$new_version\"/" setup.py
-        echo "::set-output name=new_version::$new_version"  # Set new_version as an output
+      - name: Build a binary wheel and a source tarball
+        run: python -m build --sdist --wheel --outdir dist/
 
-    - name: Build a binary wheel and a source tarball
-      run: python -m build
+      - name: Publish distribution 📦 to Test PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository-url: https://test.pypi.org/legacy/
 
-    - name: Publish distribution 📦 to Test PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: https://test.pypi.org/legacy/
-      continue-on-error: false  # Catch errors if any
-
-    - name: Publish distribution 📦 to PyPI
-      if: github.ref == 'refs/heads/main' && always()
-      uses: pypa/gh-action-pypi-publish@release/v1
-
-    - name: Create GitHub Release
-      if: github.ref == 'refs/heads/main' && always()
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v${{ steps.bump_version.outputs.new_version }}  # Reference the bumped version
-        release_name: Release ${{ steps.bump_version.outputs.new_version }}
-        draft: false
-        prerelease: false
+      - name: Publish distribution 📦 to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
