--- a/setup.cfg
+++ b/setup.cfg
@@ -35,5 +35,5 @@ install_requires =
     retry~=0.9.2
     selenium~=4.8.2
     googletrans~=4.0.0rc1
-
+    webdriver-manager~=4.0.2
 python_requires = >=3.10
